// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`header renders with build version 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Dashboard
    </h3>
    <p class="ml-auto hidden font-courier text-xs font-medium text-muted-foreground md:block">
      build: v1.0.0
    </p>
  </div>
</div>

`;

exports[`header renders with context value on \`/explore\` 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Explore
    </h3>
    <div class="mx-2 flex items-center gap-2">
      <gui-chevron-right-icon
        classname="text-muted-foreground"
        size="16"
      >
      </gui-chevron-right-icon>
      <gui-inline-code
        classname="mx-0"
        variant="mono"
      >
        /foo/bar/baz
      </gui-inline-code>
    </div>
  </div>
</div>

`;

exports[`renders Header for route / with expected name Dashboard 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Dashboard
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /create-new-project with expected name null 1`] = `


`;

exports[`renders Header for route /error with expected name null 1`] = `


`;

exports[`renders Header for route /explore with expected name Explore 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Explore
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /help with expected name Help 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Help
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /help/selectors with expected name Help 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Help / Selectors
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /labels with expected name Labels 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Labels
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /queries with expected name Queries 1`] = `

<div class="flex h-[65px] w-full cursor-default items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-end">
    <h3 class="text-md font-medium">
      Queries
    </h3>
  </div>
</div>

`;
